<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">willwings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_attendance">考勤打卡</string>
    <string name="title_activity_record">线路</string>
    <string name="title_activity_table">设备</string>
    <string name="title_activity_qrcode">扫描二维码</string>
    <string name="title_activity_repair_list">维修任务</string>
    <string name="title_activity_repair">维修</string>
    <string name="title_activity_maintain_list">保养任务</string>
    <string name="title_activity_maintain">保养</string>
    <string name="on_work_activity_attendance">上班：</string>
    <string name="off_work_activity_attendance">下班：</string>
    <string name="sign_in_activity_attendance">签到</string>
    <string name="sign_out_activity_attendance">签退</string>
    <string name="device_number">设备简称：</string>
    <string name="report_title">报修标题：</string>
    <string name="memo">备注：</string>
    <string name="report_datetime">上报时间：</string>
    <string name="reporter">上报人：</string>
    <string name="fault_description">故障描述：</string>
    <string name="picture">照片：</string>
    <string name="repair_result">维修结论：</string>
    <string name="maintain_name">保养名称：</string>
    <string name="device_name">设备名称：</string>
    <string name="device_producer">生产厂商：</string>
    <string name="device_type">设备类型：</string>
    <string name="device_serial">产品序列号：</string>
    <string name="device_brand">设备品牌：</string>
    <string name="device_model">设备型号：</string>
    <string name="device_bought_time">购买时间：</string>
    <string name="device_location">设备位置：</string>

    <string name="maintain_description">保养描述：</string>
    <string name="maintain_result">保养结论：</string>
    <string name="fault_place">故障地点：</string>
    <string name="tabDescription">tab描述</string>
    <string name="submit">提交</string>
    <string name="update">暂存</string>
    <string name="advice">建议：</string>
    <string name="query">查询</string>
    <string name="title_activity_device_info_search">查看设备资料</string>
    <string name="title_activity_device_info_detail">设备资料信息</string>
    <string name="title_activity_change_password">修改密码</string>
    <string name="title_activity_feedback">意见反馈</string>
    <string name="title_activity_about_info">关于</string>
    <string name="title_activity_rank">积分排名</string>
    <string name="title_activity_bonus">抽奖</string>
    <string name="title_repair_record">维修记录</string>
    <string name="get_lottery">抽奖</string>
    <string name="title_activity_user_info">用户信息</string>
    <string name="title_activity_task">任务</string>
    <string name="title_activity_bad">报警</string>
    <string name="title_activity_task_list">任务列表</string>
    <string name="accept_task">接受任务</string>
    <string name="title_activity_checkin">签到</string>


    <string name="task_name">任务名称：</string>
    <string name="task_description">任务描述：</string>
    <string name="task_result">任务结论：</string>
    <string name="title_activity_bonus_history">中奖历史</string>
    <string name="title_activity_repair_record">维修记录</string>

    <string name="fa_commont">&#xf0e5;</string>
</resources>
