<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="*"
    android:shrinkColumns="*">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DCDCDC" />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:background="@drawable/layout_selector"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:text="@string/device_number"/>

            <TextView
                android:id="@+id/device_info_brief"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </TableRow>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DCDCDC" />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:background="@drawable/layout_selector"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:text="@string/device_name"/>

            <TextView
                android:id="@+id/device_info_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DCDCDC" />
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:background="@drawable/layout_selector"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:text="@string/device_producer"/>

            <TextView
                android:id="@+id/device_info_producer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"/>
        </LinearLayout>
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DCDCDC" />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:background="@drawable/layout_selector"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:text="@string/device_type"/>
            <TextView
                android:id="@+id/device_info_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DCDCDC" />
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:background="@drawable/layout_selector"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:text="@string/device_serial"/>

            <TextView
                android:id="@+id/device_info_serial"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"/>
        </LinearLayout>
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DCDCDC" />
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:background="@drawable/layout_selector"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:text="@string/device_brand"/>

            <TextView
                android:id="@+id/device_info_brand"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"/>
        </LinearLayout>
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DCDCDC" />
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:background="@drawable/layout_selector"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:text="@string/device_model"/>

            <TextView
                android:id="@+id/device_info_model"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"/>
        </LinearLayout>
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DCDCDC" />
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:background="@drawable/layout_selector"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:text="@string/device_bought_time"/>

            <TextView
                android:id="@+id/device_info_bought_time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"/>
        </LinearLayout>
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DCDCDC" />
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:background="@drawable/layout_selector"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:text="@string/device_location"/>

            <TextView
                android:id="@+id/device_info_location"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"/>
        </LinearLayout>
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DCDCDC" />
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:background="@drawable/layout_selector"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:text="@string/memo"/>

            <TextView
                android:id="@+id/device_info_memo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"/>
        </LinearLayout>
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DCDCDC" />

</TableLayout>