<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:stretchColumns="*"
android:shrinkColumns="*">

<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="#DCDCDC" />

<TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:background="@drawable/layout_selector"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:text="@string/device_id"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="KJC1-1"/>
    </LinearLayout>
</TableRow>

<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="#DCDCDC" />

<TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:background="@drawable/layout_selector"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:text="@string/report_datetime"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="2015-05-21 13:29"/>
    </LinearLayout>
</TableRow>

<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="#DCDCDC" />
<TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:background="@drawable/layout_selector"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:text="@string/fault_description"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:text="C区螺杆机试运行，检查是否有漏水，2号3号泵漏水，泄水后维修"/>
    </LinearLayout>
</TableRow>

<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="#DCDCDC" />

<TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:background="@drawable/layout_selector"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:text="@string/repair_result"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="14sp"
            android:hint=""/>
    </LinearLayout>
</TableRow>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"/>
</LinearLayout>

</TableLayout>