<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="*">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DCDCDC" />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:background="@drawable/layout_selector"
            >
            <TextView
                android:id="@+id/username_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:text="@string/device_id"/>

            <EditText
                android:id="@+id/editText1"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:ems="8"
                android:singleLine="true"
                android:background="@null"
                android:textSize="14sp"
                android:hint="例如 'KJC1-1'"/>
        </LinearLayout>
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DCDCDC" />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:background="@drawable/layout_selector"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:text="@string/fault_place"/>
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:ems="8"
                android:singleLine="true"
                android:background="@null"
                android:textSize="14sp"
                android:hint="请填写故障发生地点"/>
        </LinearLayout>
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DCDCDC" />
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:background="@drawable/layout_selector"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:text="@string/fault_description"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textSize="14sp"
                android:hint=""/>
        </LinearLayout>
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DCDCDC" />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:clickable="true"
            android:background="@drawable/layout_selector"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:text="@string/picture"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/id_tab_repair_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="拍照上传"/>

                <Button
                    android:id="@+id/id_tab_repair_browse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="本地上传"/>
            </LinearLayout>
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">
        <ImageView android:id="@+id/id_tab_repair_img"
            android:contentDescription="@string/picture"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_launcher"/>
    </TableRow>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"/>
    </LinearLayout>

</TableLayout>